# Mash

./: .env.example  .gitignore  CONVERSATIONS_FIX.md  GEMINI_QUOTA_ANALYSIS.md  README.md  SYNC_STATUS.md  alembic.ini  main.py  nixpacks.toml  pyproject.toml  requirements.txt  spec.md
alembic/: env.py
alembic/versions/: 001_initial_schema.py
app/: __init__.py  config.py  main.py
app/agents/: __init__.py  base_agent.py  customer_service_agent.py  primary_agent.py  specialist_agents.py
app/api/: __init__.py
app/api/routes/: __init__.py  agents.py  calls.py  conversations.py  dashboard.py  knowledge.py  seed.py  tickets.py  users.py  websocket.py  whatsapp.py
app/core/: __init__.py  events.py  state.py  workflow.py
app/data/: knowledge_base.json
app/models/: __init__.py  database.py  schemas.py
app/services/: __init__.py  agent_service.py  asr_service.py  knowledge_service.py  tool_service.py  tts_service.py  whatsapp_service.py
app/tools/: __init__.py  base_tool.py  customer_service_tools.py  implementations.py
app/utils/: __init__.py  audio.py  logging.py
frontend/: .env.local.example  README.md  package.json
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(dashboard)/: layout.tsx
frontend/src/app/agents/: page.tsx
frontend/src/app/conversations/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/lib/: api.ts  types.ts  utils.ts
tests/: __init__.py  conftest.py  test_agents.py  test_api.py  test_tools.py
(+10 files in other folders)
